--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "chart.js": "^3.7.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-chartjs-2": "^4.0.0",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
