--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.8.0",
     "eslint-plugin-react": "^7.28.0",
+    "jest-canvas-mock": "^2.3.1",
     "jest-junit": "^13.0.0",
     "sonarqube-scanner": "^2.8.1"
   },
