--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Install
         run: npm ci
       - name: Test
-        run: npm run test
+        run: npm run unit
       - name: Lint
         run: npm run lint
       - name: SonarCloud Scan
