--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -9,7 +9,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+        with:
+          fetch-depth: 0
+      - name: Use Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '16'
