update sonarqube exclude and fix code smell on MenuLink

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,6 @@ sonar.organization=dsmedley
 sonar.sources=src
 sonar.tests=src
 sonar.test.inclusions=src/**/*.spec.js,src/**/*.spec.jsx,src/**/*.test.js,src/**/*.test.jsx,src/**/*.test.ts,src/**/*.test.tsx
-sonar.coverage.exclusions=src/index.tsx
+sonar.coverage.exclusions=src/index.tsx,src/reportWebVitals.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.sourceEncoding=UTF-8
