--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.8",
+    "@nivo/bar": "^0.79.1",
+    "@nivo/pie": "^0.79.1",
+    "@nivo/radial-bar": "^0.79.1",
+    "@nivo/tooltip": "^0.79.0",
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
@@ -14,7 +18,6 @@
     "chart.js": "^3.7.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -32,8 +35,7 @@
     "eslint": "^8.8.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest-canvas-mock": "^2.3.1",
-    "jest-junit": "^13.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "sonarqube-scanner": "^2.8.1"
   },
   "scripts": {
@@ -56,9 +58,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "jest-junit": {
-    "outputDirectory": "./coverage",
-    "outputName": "test-report.xml"
   }
 }
