--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,9 @@
         "semi": [
             "error",
             "always"
+        ],
+        "@typescript-eslint/no-empty-function": [
+            "off"
         ]
     }
 }
